# transformer-from-scratch

./: .gitignore  README.md  decoder.py  encoder.py  multihead_attention.py  profiling.ipynb  pyproject.toml  training.py  training_large.py  training_small.py  transformer.py  transformer_block.py
src/transformer_from_scratch/: decoder.py  encoder.py  main.py  training.py  training_large.py  training_small.py  transformer.py  transformer_block.py
src/transformer_from_scratch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
